# things-3-mcp

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  manifest.json  pyproject.toml
references/: tool-reference.md  url-scheme.md  workflows.md
src/things3_mcp/: __init__.py  __main__.py  applescript.py  auth.py  formatters.py  models.py  sampling.py  server.py  someday.py  url_scheme.py
tests/: conftest.py  test_formatters.py  test_sampling.py  test_server.py  test_someday.py
